fix: navbar overflow width in production

--- a/styles/global.css
+++ b/styles/global.css
@@ -144,6 +144,11 @@
 }
 
 @media screen and (max-width:560px) {
+    .navbar--container {
+        width:100%;
+        max-width:100%;
+    }
+
    .navbar--content-right {
       column-gap:1.5rem;
    }
